# uts-94691-Deep-Learning-2026

./: 2026-02-17-DL_Lab1_Exercise1.ipynb  README.md  pyproject.toml
AT1/: AT1 brief.docx  Assignment1_PartA.ipynb  Assignment1_PartB.ipynb  assignment1-partA-26239780.html  assignment1-partA-26239780.ipynb  assignment1-partB-26239780-report.docx  assignment1-partB-26239780.html  assignment1-partB-26239780.ipynb
